# comp-blocks

./: .gitignore  README.md  TaxiFareRegrModel.pt  example.py  pyproject.toml  simple_example.py  taxi_model_example.py
.github/workflows/: tests.yml
data/: iris.csv
src/: block_base.py  block_registry.py  params_base.py
src/blocks/: block_base.py  parallel_runner.py
src/blocks/average/: average.py
src/blocks/average/tests/: test_average.py
src/blocks/predict/: predict_taxi.py
src/blocks/prepare/: prepare.py  prepare_block.py  prepare_taxi.py
src/blocks/prepare/tests/: test_prepare.py
src/blocks/simple/average/: average_block.py
src/blocks/simple/average/tests/: test_average.py
src/blocks/simple/sum/: sum_block.py
src/blocks/train/: train_tabular.py  train_taxi.py
src/blocks/train/models/: tabular_model.py
src/runners/: block_runner.py  parallel_runner.py  sequential_runner.py
src/runners/tests/: test_parallel_runner.py  test_sequential_runner.py  test_workflow.py
src/utils/: logging.py  wrapper.py
