[tool.poetry]
name = "comp-blocks"
version = "0.1.0"
description = ""
authors = ["nick-roberson <nicholas.roberson.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.3.0"
pandas = "^2.2.1"
rich = "^13.7.1"
pydantic = "^2.6.4"
typing-extensions = "^4.10.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
typer = "^0.12.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
